# booky

./: .gitattributes  .gitignore  .gitmodules  README.md  TODO.md  analysis_options.yaml  flutter_rust_bridge.yaml  justfile  pubspec.lock_renamed  pubspec.yaml
android/: build.gradle  gradle.properties
doc/: android_filesystem_access_comparison.md
integration_test/: _extended_test_io.dart  _extended_test_web.dart  extended_test.dart  extensions.dart  helper.dart  simple_test.dart
lib/: ad_editing.dart  (+23 more)
native/: .gitignore  Cargo.toml  detect_barcode
native/mock/babelio/normal_book/: get_book_page__slash_livres_slash_Easterman-Le-nom-de-la-bete_slash_81448.html
native/mock/babelio/see_more_bug/: get_book_blurb_see_more_1250739.html  get_book_page__slash_livres_slash_Pullman--la-croisee-des-mondes-tome-2--La-tour-des-anges_slash_59278.html  get_book_page__slash_livres_slash_Pullman--la-croisee-des-mondes-tome-2--La-tour-des-anges_slash_59278.json  get_book_url_9782070541898.json
native/mock/google_books/: get_volume_https:_slash__slash_www.googleapis.com_slash_books_slash_v1_slash_volumes_slash_HY_FNwAACAAJ  search_by_isbn_9782266162777
native/mock/google_books/normal_book/: get_volume_https:_slash__slash_www.googleapis.com_slash_books_slash_v1_slash_volumes_slash_HY_FNwAACAAJ.html  get_volume_https:_slash__slash_www.googleapis.com_slash_books_slash_v1_slash_volumes_slash_HY_FNwAACAAJ.json  search_by_isbn_9782266162777.html
native/mock/leslibraires/unknown_book/: isbn_9780956010902.json
native/src/: abebooks.rs  api.rs  babelio.rs  booksprice.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  cached_client.rs  client.rs  common.rs  config.rs  fs_helper.rs  google_books.rs  image_tools.rs  justbooks.rs  leboncoin.rs  leslibraires.rs  lib.rs  publisher.rs
native/src/abebooks/: parser.rs  request.rs
native/src/abebooks/test/: search_isbn_9782703304180.html
native/src/babelio/: parser.rs  request.rs
native/src/babelio/test/: 9782253143321_le_livre_tibetain_des_morts.html
native/src/booksprice/: request.rs  selenium_common.rs
native/src/client/: cached_http_client.rs  mock_client.rs
native/src/google_books/: parser.rs  request.rs
native/src/google_books/test/9782070456284/: search_by_isbn_9782070456284.html
native/src/google_books/test/9782266162777/: isbn_response.html  self_link_response.html
native/src/justbooks/: parser.rs  request.rs
native/src/leboncoin/: request.rs
native/src/leslibraires/: parser.rs  request.rs
native/src/leslibraires/test/: 9782286056636.html  9786202293969.html
native/tests/test_html/: output_bookprice.html  sample_page.html
test/tester/: Cargo.toml
test/tester/src/: main.rs
(+87 files in other folders)
