[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
#reqwest = "0.11.14"
base64 = "0.21.0"
itertools = "0.10.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json", "multipart"] }
scraper = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
mockito = "1.0.0"
