[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
base64 = "0.21.0"
itertools = "0.10.5"
regex = "1.7.1"
reqwest = { version = "0.11.14", default-features = false, features = ["blocking", "json", "rustls-tls", "multipart"] }
scraper = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
mockito = "1.0.0"
thirtyfour = "0.31.0"
tokio = { version = "1.20", features = ["fs", "macros", "rt-multi-thread", "io-util", "sync"] }

# [dev-dependencies]
color-eyre = "0.6.2"
hyper = { version = "0.14", features = ["server", "tcp"] }
futures = "0.3.28"
html2text = "0.5.1"
strum = { version = "0.24.1", features = ["strum_macros"] }
strum_macros = "0.24.3"
pretty_assertions = "1.3.0"
