[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
obws = "0.11.5"
pretty_assertions = "1.4.0"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
